Se mejoro por completo la documentacion de las apis o end points. Agregando ejemplos practicos etc.